--- a/tex/latex/wissdoc/wissfont.sty
+++ b/tex/latex/wissdoc/wissfont.sty
@@ -12,9 +12,32 @@
 %% --
 %%
 
-\usepackage{color}
-\usepackage{xcolor}
-\usepackage{framed}
-\usepackage{listings}
-\usepackage{epsfig,wrapfig}
-\usepackage{graphicx}  % um Graphiken einzubinden
+% Schriftart
+\renewcommand{\familydefault}{\sfdefault}
+\usepackage{courier} \raggedright
+\usepackage{palatino}
+\usepackage{newcent}      %for sophisticated font style
+\usepackage{helvet}
+\renewcommand{\familydefault}{\ttdefault}
+
+\usepackage{times}
+
+%Danach muss man die Standardschriftart setzen mit dem Befehl \fontfamily{abr}\selectfont, der für das gesamte restliche Dokument gilt, oder mit {\fontfamily{abr}\selectfont Some Text} um nur den eingeklammerten Bereich zu betreffen. abr ist die Abkürzung für die Schriftart. Die häufigsten sind ptm (Times), phv (Helvetica), pcr (Courier), pbk (Bookman), pag (Avant Garde), ppl (Palatino), bch (Charter), pnc (New Century Schoolbook), pzc (Zapf Chancery), put (Utopia ).
+
+% mathfonts
+\usepackage{mathpazo}
+\usepackage{euler}
+\usepackage{cmbright}
+\usepackage{ccfonts,eulervm}
+\usepackage[math]{iwona}
+\usepackage[math]{kurier}
+\usepackage{kmath,kerkis}
+\usepackage{millennial}
+\usepackage{fouriernc}
+\usepackage{pxfonts}
+\usepackage{mathpple}
+\usepackage{arev}
+\usepackage[charter]{mathdesign}
+\usepackage{comicsans}
+\usepackage[garamond]{mathdesign}
+\usepackage{fourier}
